--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
 /* Global Styles */
 
+@import '~codemirror/lib/codemirror.css';
+@import '~codemirror/theme/idea.css';
+@import '~codemirror/addon/fold/foldgutter.css';
+@import '~codemirror/addon/lint/lint.css';
+
 * {
     font-family: 'Roboto', Arial, sans-serif;
     color: #616161;
