--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <app-top-bar></app-top-bar>
 
-<div class="container">
+<!-- <div class="container">
   <router-outlet></router-outlet>
-</div>
+</div> -->
+
+
+<ngx-codemirror #codemirror [options]="codeMirrorOptions" [(ngModel)]="obj" (ngModelChange)="setEditorContent($event)">
+</ngx-codemirror>
+
