--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,3 +1,3 @@
 <a [routerLink]="['/']">
-  <h1>The Programming Language Playground</h1>
+  <h1 style = "font-family:Menlo">The Programming Language Playground</h1>
 </a>
