--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,13 +12,13 @@
       <div class="card card-body bg-light">
         <code>
           &lt;L1&gt; ::= &lt;num&gt; <br>
-                     | &lt;id&gt; <br>
-                     | ( + &lt;L1&gt; &lt;L1&gt;) <br>
-                     | ( * &lt;L1&gt; &lt;L1&gt;) <br>
-                     | ( bind &lt;id&gt; &lt;L1&gt; &lt;L1&gt;) <br>
-                     | ( fun &lt;id&gt; &lt;L1&gt; ) <br>
-                     | ( if0 &lt;L1&gt; &lt;L1&gt; &lt;L1&gt; ) <br>
-                     | ( call &lt;L1&gt; &lt;L1&gt;)
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| &lt;id&gt; <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| ( + &lt;L1&gt; &lt;L1&gt;) <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| ( * &lt;L1&gt; &lt;L1&gt;) <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| ( bind &lt;id&gt; &lt;L1&gt; &lt;L1&gt;) <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| ( fun &lt;id&gt; &lt;L1&gt; ) <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| ( if0 &lt;L1&gt; &lt;L1&gt; &lt;L1&gt; ) <br>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| ( call &lt;L1&gt; &lt;L1&gt;)
         </code>
     </div> 
 
