--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<h1 class="text-center">Semantics by Examples</h1>
+<br>
+<h1 class="text-center">Programming Language Playground</h1>
 
 <div class="container mt-3">
   <div class="row justify-content-center">
@@ -77,7 +78,7 @@
         </div>
 
         <br><br><br>
-        <h3> Made by:</h3>
+        <h5> Made by:</h5>
         <p>Atharva Shukla <br>
            Nithin Saripalli <br>
           Deepak Ramesh Sethuraman
